[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/hud.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/ibm_cgathin.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/lifebar_background.png" type="Texture" id=3]
[ext_resource path="res://assets/lifebar_fill.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/ibm_cgathin_large.tres" type="DynamicFont" id=5]

[node name="hud" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GUI" type="MarginContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 293.0
margin_bottom = 86.0

[node name="HBoxContainer" type="VBoxContainer" parent="GUI"]
editor/display_folded = true
margin_right = 273.0
margin_bottom = 66.0
custom_constants/separation = 20

[node name="HealthBars" type="HBoxContainer" parent="GUI/HBoxContainer"]
margin_right = 273.0
margin_bottom = 30.0
custom_constants/separation = 25

[node name="HealthLabel" type="Label" parent="GUI/HBoxContainer/HealthBars"]
margin_top = 7.0
margin_right = 48.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "HP:"

[node name="Gauge" type="TextureProgress" parent="GUI/HBoxContainer/HealthBars"]
margin_left = 73.0
margin_right = 273.0
margin_bottom = 30.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="ScoreLabel" type="Label" parent="GUI/HBoxContainer"]
margin_top = 50.0
margin_right = 273.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 2 )
text = "Score: "

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.5
margin_top = -109.0
margin_right = 136.5
margin_bottom = 109.0

[node name="Countdown" type="Label" parent="CenterContainer"]
margin_left = 64.0
margin_top = 37.0
margin_right = 208.0
margin_bottom = 181.0
custom_fonts/font = ExtResource( 5 )
text = "0"
